--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
       matrix:
         docker-platform:
           - linux/amd64
-         # - linux/arm64
+          - linux/arm64
          # - linux/arm/v6
          # - linux/arm/v7
          # - linux/i386
